# Project_Genesis

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FOUNDERS_ROLE.md  GENESIS_BACKGROUND_REVIEW_2026-02-13.md  GENESIS_ROADMAP.md  GENESIS_SYSTEM_BLUEPRINT.md  GENESIS_WORK_LOG_2026-02-13.md  HANDOFF_NOTE.md  POLARIS_BACKGROUND_REVIEW_2026-02-13.md  POLARIS_ROADMAP.md  POLARIS_SYSTEM_BLUEPRINT.md  POLARIS_WORK_LOG_2026-02-13.md  PROJECT_GENESIS_INSTITUTIONAL_WHITE_PAPER.md  PROJECT_GENESIS_PUBLIC_BRIEF.md  PROJECT_POLARIS_INSTITUTIONAL_WHITE_PAPER.md  PROJECT_POLARIS_PUBLIC_BRIEF.md  README.md  RUNNING.md  THREAT_MODEL_AND_INVARIANTS.md  TRUST_CONSTITUTION.md  UX_LEDGER.md  ZERO_BUDGET_LAUNCH_PLAN.md  pyproject.toml  render.yaml
config/: commission_policy.json  constitutional_params.json  leave_policy.json  market_policy.json  runtime_policy.json  skill_lifecycle_params.json  skill_taxonomy.json  skill_trust_params.json
cw_handoff/: .integrity_chain.jsonl  ACTION_QUEUE.md  BRIEF.md  BRIEF_2026-02-16_ARCHIVE.md  CC_DESIGN_ASSESSMENT.md  COWORK_HANDOFF.md  CW_TO_CC_ANTISOCIAL_NETWORK_ARGUMENT.md  CW_TO_CC_DESIGN_HANDOFF.md  CW_TO_CC_OPEN_BRAIN_BRIDGE.md  CX_BLUEPRINT.md  CX_CHECKPOINT.md  HANDOFF.md  NARRATIVE_CHALLENGE.md  OUTREACH_STRATEGY.md  POPPERIAN_FALSIFICATION_FRAMEWORK.md  QWERTY_CHECKPOINT.md  UX_DESIGN_SPEC.md  file_integrity.py  im_service.py  ob_bridge.py  test_file_integrity.py
cx_recovery/: CX_RECOVERY.md
docs/: ANCHORS.md  GENESIS_EVENTS.md  INSTITUTIONAL_MEMORY.md  TECHNICAL_OVERVIEW.md  anchors.json
tests/: __init__.py  (+61 more)
(+154 files in other folders)
