[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis"
version = "0.1.0"
description = "Project Genesis — governance-first trust infrastructure"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "George Jackson"}]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
